		* sv_stopspeed - default value of 100
	* Added cvars to control the console
		* cl_console_disabled - determines if the console is disabled entirely. Default value is 0.
		* cl_console_fraction - determines how much of the screen the console will take up. The default value is 0.5 (50%)
			* For the old fullscreen console behaviour, use cl_console_fraction 1.0

BUG FIXES:
	* Limited relative velocity gain to the object's velocity so you can't gain velocity forever.
		* However this does not apply to the tangfuslicator ammo or rockets, so you can boost off of those.
	* Fixed crash when alt+tabbing out
	* Fixed textures still being internally interpreted with a maximum length of 32 characters instead of the intended 80, leading to phantom downloads of textures that really existed, but with longer names
	* Fixed debug info being printed while not connected to the server
	* Fixed garbage debug information being printed when the game is running below 30 fps due to non-escaped % sign

REMOVALS:

OTHER CHANGES:
	* Gave the tangfuslicator particles a bit of colour
	* Renamed some cvars:
		* zombietime -> sv_zombietime
		* showclamp -> sv_showclamp
	* Engine sign-on message now matches "Euphoria Retro Game Engine" external branding
	* Changed quit image

Version 0.0.10 (Build 558)
June 8, 2024
* Fixed numerous horrific crimes against C programming that caused crash bugs

Version 0.0.10 (Build 553)
June 8, 2024

NEW FEATURES:
* Added the Tangfuslicator!
	* A director team gun that can zombify Players. However, the range is short (currently 1,536 units) and you can't directly see where it's going (it spews particles).
* Major particle system improvements:
	* Added velocity to generic particle effect
	* Added the func_particle_effect entity
		* You can use this to send any tempent over the network.