@@ -34,7 +34,7 @@
     <ClCompile Include="client\cl_fx_lightstyle.c" />
     <ClCompile Include="client\cl_intro.c" />
     <ClCompile Include="client\cl_loadout.c" />
-    <ClCompile Include="client\cl_ui_mainmenu.c" />
+    <ClCompile Include="client\ui\ui_mainmenu.c" />
     <ClCompile Include="client\cl_text.c" />
     <ClCompile Include="client\cl_fx_particles.c" />
     <ClCompile Include="client\cl_input.c" />
@@ -44,10 +44,15 @@
     <ClCompile Include="client\cl_render_2d.c" />
     <ClCompile Include="client\cl_tempentity.c" />
     <ClCompile Include="client\cl_font.c" />
-    <ClCompile Include="client\cl_ui.c" />
-    <ClCompile Include="client\cl_ui_eventhandling.c" />
-    <ClCompile Include="client\cl_ui_leaderboard.c" />
-    <ClCompile Include="client\cl_ui_scripts.c" />
+    <ClCompile Include="client\ui\ui.c" />
+    <ClCompile Include="client\ui\ui_eventhandling.c" />
+    <ClCompile Include="client\ui\ui_leaderboard.c" />
+    <ClCompile Include="client\ui\ui_mainmenu_browseservers.c" />
+    <ClCompile Include="client\ui\ui_mainmenu_quickstart.c" />
+    <ClCompile Include="client\ui\ui_mainmenu_quit.c" />
+    <ClCompile Include="client\ui\ui_mainmenu_settings.c" />
+    <ClCompile Include="client\ui\ui_mainmenu_zombietv.c" />
+    <ClCompile Include="client\ui\ui_scripts.c" />
     <ClCompile Include="client\cl_render_3d.c" />
     <ClCompile Include="client\cl_console.c" />
     <ClCompile Include="client\cl_input_events.c" />
